test/syc/bad/initidxneg.c
/*
 * Array index in initializer exceeds array bounds.
 */

int a[2] = {
	[-1] = 1
};
